--- a/index.html
+++ b/index.html
@@ -1,55 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Secure Portal</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-        .container {
-            background: white;
-            padding: 20px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-            border-radius: 5px;
-            text-align: center;
-        }
-        .input-field {
-            width: 100%;
-            padding: 10px;
-            margin: 10px 0;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-        .login-btn {
-            width: 100%;
-            padding: 10px;
-            background: #007bff;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        .disclaimer {
-            margin-top: 20px;
-            font-size: 12px;
-            color: red;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>Favicon Viewer</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 20px;
+    }
+    .favicon {
+      margin-top: 20px;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+    .favicon img {
+      width: 32px;
+      height: 32px;
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <h2>Login to Your Account</h2>
-        <input type="text" class="input-field" placeholder="Username" disabled>
-        <input type="password" class="input-field" placeholder="Password" disabled>
-        <button class="login-btn" disabled>Login</button>
-        <p class="disclaimer">⚠ This is a security research demo. No credentials are collected.</p>
-    </div>
+
+  <h2>Fetch Site Favicon</h2>
+  <input type="text" id="targetUrl" placeholder="https://x55.is/brutelogic/gym.php" />
+  <button onclick="loadFavicon()">Load Icon</button>
+
+  <div class="favicon" id="iconDisplay"></div>
+
+  <script>
+    function loadFavicon() {
+      const input = document.getElementById('targetUrl').value.trim();
+      try {
+        const url = new URL(input);
+        const iconUrl = `${url.origin}/favicon.ico`;
+
+        document.getElementById('iconDisplay').innerHTML = `
+          <img src="${iconUrl}" alt="favicon">
+          <span>${url.hostname}</span>
+        `;
+      } catch (e) {
+        alert('Invalid URL!');
+      }
+    }
+  </script>
+
 </body>
 </html>
